--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "connect-session-knex": "^1.7.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "helmet": "^3.22.0",
